•Rice changes (djatoka config, logback->log4j and config) •added ability to not serve directly from container root •added ability to run under Java 1.6 •added local server address property •moved binary executables from /lib to /bin to match standard djatoka distro and env var scripts

--- a/src/main/webapp/viewer.html
+++ b/src/main/webapp/viewer.html
@@ -48,17 +48,20 @@
 		if (remote != null) {
 			// old-style URL compatibility
 			// note: no longer insecure; server parses out handle and image, doesn't blindly follow
-			tileSources.push( protocol+'://'+host+':'+port+'/iiif/'+remote+'/info.json' );
+			tileSources.push( protocol+'://'+host+':'+port+directory+'iiif/'+remote+'/info.json' );
 		} else {
 			// new-style discrete parts, with possibility of multiple files
 			var handle = url.param('h');
 			var images = url.param('i');
 			var start = url.param('s') || 0;
-
-			images = images.split(',');
-			for (i=0; i<images.length; i++) {
-				tileSources.push( protocol+'://'+host+':'+port+'/iiif/'+handle+'/'+images[i]+'/info.json' );
-			}
+            var display = 'Error processng URL';
+            if (handle != null && images != null) {
+                images = images.split(',');
+                for (i=0; i<images.length; i++) {
+                    tileSources.push( protocol+'://'+host+':'+port+directory+'iiif/'+handle+'/'+images[i]+'/info.json' );
+                }
+                display = 'Viewing '+images[start]; // TODO show this, and more info, links, breadcrumbs, etc.
+            }
 		}
 		
 		OpenSeadragon({
