--- a/src/main/webapp/css/viewer.html
+++ b/src/main/webapp/css/viewer.html
@@ -21,13 +21,13 @@
   <script type="text/javascript">
 
     // The iipsrv server path (/fcgi-bin/iipsrv.fcgi by default)
-    var server = 'https://dspacedev.rice.edu/jp2/resolver';
+    var server = 'http://localhost:8080/adore-djatoka/resolver';
 
     // The *full* image path on the server. This path does *not* need to be in the web
     // server root directory. On Windows, use Unix style forward slash paths without
     // the "c:" prefix
-    //var images = 'http://memory.loc.gov/gmd/gmd433/g4330/g4330/np000066.jp2';
-    var images = 'info:lanl-repo/i/test';
+    var images = 'http://memory.loc.gov/gmd/gmd433/g4330/g4330/np000066.jp2';
+
     // Copyright or information message
     var credit = '';
     
