--- a/src/main/webapp/viewer.html
+++ b/src/main/webapp/viewer.html
@@ -21,7 +21,7 @@
   <script type="text/javascript">
 
     // The iipsrv server path (/fcgi-bin/iipsrv.fcgi by default)
-    var server = 'https://dspacedev.rice.edu/jp2/resolver';
+    var server = '/jp2/resolver';
 
     // The *full* image path on the server. This path does *not* need to be in the web
     // server root directory. On Windows, use Unix style forward slash paths without
