fixing bug where IIIFServletFilter didn't transform identifiers the same way as IdentifierResolver, oops.  also: fixed image path bug on new viewer, fixed wrong property name, changing property names to be more informative, improved comments, removed double-decoding,

--- a/src/main/webapp/new/viewer.html
+++ b/src/main/webapp/new/viewer.html
@@ -67,7 +67,7 @@
 		
 		OpenSeadragon({
 			id : 'viewer',
-			prefixUrl : directory+'images/',
+			prefixUrl : directory+'new/images/',
 			preserveViewport : true, /* after clicking next/prev */
 			initialPage : start,
 			showNavigator : true,
