added some TODOs experimenting with how levels are returned in IIIF metadata request

--- a/src/main/webapp/new/viewer.html
+++ b/src/main/webapp/new/viewer.html
@@ -72,7 +72,9 @@
 			initialPage : start,
 			showNavigator : true,
 			showRotationControl: true,
-			tileSources : tileSources
+			tileSources : tileSources,
+            tileSize : 256,
+            defaultZoomLevel: 1
 		});
 	</script>
 </body>
