--- a/src/main/webapp/new/viewer.html
+++ b/src/main/webapp/new/viewer.html
@@ -26,7 +26,7 @@
 
 </head>
 
-<body style="background-color:#000">
+<body style="background-color:#000;margin:0;padding:0">
 	<div style="position:fixed;width:100%;height:100%;margin:0;padding:0" id="viewer"></div>
 	<script type="text/javascript">
 		var url = purl();
