--- a/src/main/webapp/new/viewer.html
+++ b/src/main/webapp/new/viewer.html
@@ -74,10 +74,7 @@
 			showRotationControl:true,
 			tileSources:tileSources,
 			maxZoomPixelRatio:1,
-			animationTime:0.5,
-			defaultZoomLevel:1,
-			minZoomLevel:0.25,
-			minZoomImageRatio:0.5
+			animationTime:0.5
 		});
 	</script>
 </body>
