bugfix for imagepath when moving viewer from "/new" to "/".

--- a/src/main/webapp/viewer.html
+++ b/src/main/webapp/viewer.html
@@ -69,7 +69,7 @@
 
 		OpenSeadragon({
 			id:'viewer',
-			prefixUrl:directory+'new/images/',
+			prefixUrl:directory+'images/',
 			preserveViewport:true,
 			initialPage:start,
 			showNavigator:true,
